<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hrapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.hrapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_dashboard_attendance"
            app:destination="@id/navigation_dashboard_attendance" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.hrapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_sign"
        android:name="com.example.hrapplication.ui.sign.signFragment"
        android:label="@string/title_sign"
        tools:layout="@layout/sign_fragment" />

    <fragment
        android:id="@+id/navigation_dashboard_attendance"
        android:name="com.example.hrapplication.ui.dashboard.DashboardAttendanceFragment"
        android:label="@string/title_att"
        tools:layout="@layout/fragment_dashboard_attendance" >

    </fragment>


</navigation>